explorerscript/ssb_script/antlr/SsbScriptParser.py
# Generated from SsbScript.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SsbScriptParser ( Parser ):

    grammarFileName = "SsbScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "<INVALID>", "<INVALID>", "'coro'", 
                     "'def'", "'for_actor'", "'for_object'", "'for_performer'", 
                     "'alias'", "'previous'", "'Position'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "','", "':'", "'='", "'+'", 
                     "'@'", "'$'", "'{'", "'}'", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "STRING_LITERAL", "FOR_TARGET", 
                      "CORO", "DEF", "FOR_ACTOR", "FOR_OBJECT", "FOR_PERFORMER", 
                      "ALIAS", "PREVIOUS", "POSITION", "IDENTIFIER", "INTEGER", 
                      "DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", 
                      "OPEN_PAREN", "CLOSE_PAREN", "COMMA", "COLON", "ASSIGN", 
                      "PLUS", "AT", "DOLLAR", "OPEN_BRACE", "CLOSE_BRACE", 
                      "OPEN_SHARP", "CLOSE_SHARP", "SKIP_", "UNKNOWN_CHAR" ]

    RULE_start = 0
    RULE_funcdef = 1
    RULE_simple_def = 2
    RULE_coro_def = 3
    RULE_for_target_def = 4
    RULE_integer_like = 5
    RULE_stmt = 6
    RULE_operation = 7
    RULE_func_suite = 8
    RULE_func_alias = 9
    RULE_arglist = 10
    RULE_pos_argument = 11
    RULE_position_marker = 12
    RULE_position_marker_arg = 13
    RULE_jump_marker = 14
    RULE_label = 15
    RULE_string = 16
    RULE_lang_string = 17
    RULE_lang_string_argument = 18

    ruleNames =  [ "start", "funcdef", "simple_def", "coro_def", "for_target_def", 
                   "integer_like", "stmt", "operation", "func_suite", "func_alias", 
                   "arglist", "pos_argument", "position_marker", "position_marker_arg", 
                   "jump_marker", "label", "string", "lang_string", "lang_string_argument" ]

    EOF = Token.EOF
    T__0=1
    STRING_LITERAL=2
    FOR_TARGET=3
    CORO=4
    DEF=5
    FOR_ACTOR=6
    FOR_OBJECT=7
    FOR_PERFORMER=8
    ALIAS=9
    PREVIOUS=10
    POSITION=11
    IDENTIFIER=12
    INTEGER=13
    DECIMAL_INTEGER=14
    OCT_INTEGER=15
    HEX_INTEGER=16
    BIN_INTEGER=17
    OPEN_PAREN=18
    CLOSE_PAREN=19
    COMMA=20
    COLON=21
    ASSIGN=22
    PLUS=23
    AT=24
    DOLLAR=25
    OPEN_BRACE=26
    CLOSE_BRACE=27
    OPEN_SHARP=28
    CLOSE_SHARP=29
    SKIP_=30
    UNKNOWN_CHAR=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SsbScriptParser.EOF, 0)

        def funcdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SsbScriptParser.FuncdefContext)
            else:
                return self.getTypedRuleContext(SsbScriptParser.FuncdefContext,i)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = SsbScriptParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SsbScriptParser.CORO or _la==SsbScriptParser.DEF:
                self.state = 38
                self.funcdef()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(SsbScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coro_def(self):
            return self.getTypedRuleContext(SsbScriptParser.Coro_defContext,0)


        def simple_def(self):
            return self.getTypedRuleContext(SsbScriptParser.Simple_defContext,0)


        def for_target_def(self):
            return self.getTypedRuleContext(SsbScriptParser.For_target_defContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = SsbScriptParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcdef)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.coro_def()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.simple_def()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.for_target_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SsbScriptParser.DEF, 0)

        def INTEGER(self):
            return self.getToken(SsbScriptParser.INTEGER, 0)

        def func_suite(self):
            return self.getTypedRuleContext(SsbScriptParser.Func_suiteContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_simple_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_def" ):
                listener.enterSimple_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_def" ):
                listener.exitSimple_def(self)




    def simple_def(self):

        localctx = SsbScriptParser.Simple_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(SsbScriptParser.DEF)
            self.state = 52
            self.match(SsbScriptParser.INTEGER)
            self.state = 53
            self.func_suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Coro_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CORO(self):
            return self.getToken(SsbScriptParser.CORO, 0)

        def IDENTIFIER(self):
            return self.getToken(SsbScriptParser.IDENTIFIER, 0)

        def func_suite(self):
            return self.getTypedRuleContext(SsbScriptParser.Func_suiteContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_coro_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoro_def" ):
                listener.enterCoro_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoro_def" ):
                listener.exitCoro_def(self)




    def coro_def(self):

        localctx = SsbScriptParser.Coro_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_coro_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SsbScriptParser.CORO)
            self.state = 56
            self.match(SsbScriptParser.IDENTIFIER)
            self.state = 57
            self.func_suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_target_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SsbScriptParser.DEF, 0)

        def INTEGER(self):
            return self.getToken(SsbScriptParser.INTEGER, 0)

        def FOR_TARGET(self):
            return self.getToken(SsbScriptParser.FOR_TARGET, 0)

        def OPEN_PAREN(self):
            return self.getToken(SsbScriptParser.OPEN_PAREN, 0)

        def integer_like(self):
            return self.getTypedRuleContext(SsbScriptParser.Integer_likeContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SsbScriptParser.CLOSE_PAREN, 0)

        def func_suite(self):
            return self.getTypedRuleContext(SsbScriptParser.Func_suiteContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_for_target_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_target_def" ):
                listener.enterFor_target_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_target_def" ):
                listener.exitFor_target_def(self)




    def for_target_def(self):

        localctx = SsbScriptParser.For_target_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_target_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SsbScriptParser.DEF)
            self.state = 60
            self.match(SsbScriptParser.INTEGER)
            self.state = 61
            self.match(SsbScriptParser.FOR_TARGET)
            self.state = 62
            self.match(SsbScriptParser.OPEN_PAREN)
            self.state = 63
            self.integer_like()
            self.state = 64
            self.match(SsbScriptParser.CLOSE_PAREN)
            self.state = 65
            self.func_suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integer_likeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SsbScriptParser.INTEGER, 0)

        def IDENTIFIER(self):
            return self.getToken(SsbScriptParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SsbScriptParser.RULE_integer_like

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_like" ):
                listener.enterInteger_like(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_like" ):
                listener.exitInteger_like(self)




    def integer_like(self):

        localctx = SsbScriptParser.Integer_likeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_integer_like)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not(_la==SsbScriptParser.IDENTIFIER or _la==SsbScriptParser.INTEGER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(SsbScriptParser.OperationContext,0)


        def label(self):
            return self.getTypedRuleContext(SsbScriptParser.LabelContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = SsbScriptParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SsbScriptParser.IDENTIFIER]:
                self.state = 69
                self.operation()
                pass
            elif token in [SsbScriptParser.DOLLAR]:
                self.state = 70
                self.label()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 73
            self.match(SsbScriptParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SsbScriptParser.IDENTIFIER, 0)

        def OPEN_PAREN(self):
            return self.getToken(SsbScriptParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(SsbScriptParser.CLOSE_PAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(SsbScriptParser.ArglistContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)




    def operation(self):

        localctx = SsbScriptParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SsbScriptParser.IDENTIFIER)
            self.state = 76
            self.match(SsbScriptParser.OPEN_PAREN)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SsbScriptParser.STRING_LITERAL) | (1 << SsbScriptParser.POSITION) | (1 << SsbScriptParser.IDENTIFIER) | (1 << SsbScriptParser.INTEGER) | (1 << SsbScriptParser.AT) | (1 << SsbScriptParser.OPEN_BRACE))) != 0):
                self.state = 77
                self.arglist()


            self.state = 80
            self.match(SsbScriptParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_suiteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACE(self):
            return self.getToken(SsbScriptParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(SsbScriptParser.CLOSE_BRACE, 0)

        def func_alias(self):
            return self.getTypedRuleContext(SsbScriptParser.Func_aliasContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SsbScriptParser.StmtContext)
            else:
                return self.getTypedRuleContext(SsbScriptParser.StmtContext,i)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_func_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_suite" ):
                listener.enterFunc_suite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_suite" ):
                listener.exitFunc_suite(self)




    def func_suite(self):

        localctx = SsbScriptParser.Func_suiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(SsbScriptParser.OPEN_BRACE)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SsbScriptParser.IDENTIFIER, SsbScriptParser.DOLLAR]:
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 83
                    self.stmt()
                    self.state = 86 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SsbScriptParser.IDENTIFIER or _la==SsbScriptParser.DOLLAR):
                        break

                pass
            elif token in [SsbScriptParser.ALIAS]:
                self.state = 88
                self.func_alias()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 91
            self.match(SsbScriptParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_aliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALIAS(self):
            return self.getToken(SsbScriptParser.ALIAS, 0)

        def PREVIOUS(self):
            return self.getToken(SsbScriptParser.PREVIOUS, 0)

        def getRuleIndex(self):
            return SsbScriptParser.RULE_func_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_alias" ):
                listener.enterFunc_alias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_alias" ):
                listener.exitFunc_alias(self)




    def func_alias(self):

        localctx = SsbScriptParser.Func_aliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(SsbScriptParser.ALIAS)
            self.state = 94
            self.match(SsbScriptParser.PREVIOUS)
            self.state = 95
            self.match(SsbScriptParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArglistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pos_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SsbScriptParser.Pos_argumentContext)
            else:
                return self.getTypedRuleContext(SsbScriptParser.Pos_argumentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SsbScriptParser.COMMA)
            else:
                return self.getToken(SsbScriptParser.COMMA, i)

        def getRuleIndex(self):
            return SsbScriptParser.RULE_arglist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArglist" ):
                listener.enterArglist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArglist" ):
                listener.exitArglist(self)




    def arglist(self):

        localctx = SsbScriptParser.ArglistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arglist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.pos_argument()
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.match(SsbScriptParser.COMMA)
                    self.state = 99
                    self.pos_argument() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SsbScriptParser.COMMA:
                self.state = 105
                self.match(SsbScriptParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pos_argumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer_like(self):
            return self.getTypedRuleContext(SsbScriptParser.Integer_likeContext,0)


        def string(self):
            return self.getTypedRuleContext(SsbScriptParser.StringContext,0)


        def position_marker(self):
            return self.getTypedRuleContext(SsbScriptParser.Position_markerContext,0)


        def jump_marker(self):
            return self.getTypedRuleContext(SsbScriptParser.Jump_markerContext,0)


        def getRuleIndex(self):
            return SsbScriptParser.RULE_pos_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPos_argument" ):
                listener.enterPos_argument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPos_argument" ):
                listener.exitPos_argument(self)




    def pos_argument(self):

        localctx = SsbScriptParser.Pos_argumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pos_argument)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SsbScriptParser.IDENTIFIER, SsbScriptParser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.integer_like()
                pass
            elif token in [SsbScriptParser.STRING_LITERAL, SsbScriptParser.OPEN_BRACE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.string()
                pass
            elif token in [SsbScriptParser.POSITION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.position_marker()
                pass
            elif token in [SsbScriptParser.AT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.jump_marker()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Position_markerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSITION(self):
            return self.getToken(SsbScriptParser.POSITION, 0)

        def OPEN_SHARP(self):
            return self.getToken(SsbScriptParser.OPEN_SHARP, 0)

        def STRING_LITERAL(self):
            return self.getToken(SsbScriptParser.STRING_LITERAL, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SsbScriptParser.COMMA)
            else:
                return self.getToken(SsbScriptParser.COMMA, i)

        def position_marker_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SsbScriptParser.Position_marker_argContext)
            else:
                return self.getTypedRuleContext(SsbScriptParser.Position_marker_argContext,i)


        def CLOSE_SHARP(self):
            return self.getToken(SsbScriptParser.CLOSE_SHARP, 0)

        def getRuleIndex(self):
            return SsbScriptParser.RULE_position_marker

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosition_marker" ):
                listener.enterPosition_marker(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosition_marker" ):
                listener.exitPosition_marker(self)




    def position_marker(self):

        localctx = SsbScriptParser.Position_markerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_position_marker)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SsbScriptParser.POSITION)
            self.state = 115
            self.match(SsbScriptParser.OPEN_SHARP)
            self.state = 116
            self.match(SsbScriptParser.STRING_LITERAL)
            self.state = 117
            self.match(SsbScriptParser.COMMA)
            self.state = 118
            self.position_marker_arg()
            self.state = 119
            self.match(SsbScriptParser.COMMA)
            self.state = 120
            self.position_marker_arg()
            self.state = 121
            self.match(SsbScriptParser.CLOSE_SHARP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Position_marker_argContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SsbScriptParser.INTEGER, 0)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(SsbScriptParser.PLUS)
            else:
                return self.getToken(SsbScriptParser.PLUS, i)

        def getRuleIndex(self):
            return SsbScriptParser.RULE_position_marker_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosition_marker_arg" ):
                listener.enterPosition_marker_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosition_marker_arg" ):
                listener.exitPosition_marker_arg(self)




    def position_marker_arg(self):

        localctx = SsbScriptParser.Position_marker_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_position_marker_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(SsbScriptParser.INTEGER)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 124
                self.match(SsbScriptParser.PLUS)


            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SsbScriptParser.PLUS:
                self.state = 127
                self.match(SsbScriptParser.PLUS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Jump_markerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(SsbScriptParser.AT, 0)

        def IDENTIFIER(self):
            return self.getToken(SsbScriptParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SsbScriptParser.RULE_jump_marker
